templates, data from pickle to the word page

--- a/csv_to_pickle_converter.ipynb
+++ b/csv_to_pickle_converter.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,13 @@
     "\n",
     "        for row in data:\n",
     "            new_entry = entry()\n",
-    "            new_entry.signs.append(sign(row['hamnosys'], [row['video']]))\n",
+    "            new_entry.signs.append(sign(row['hamnosys'], [video(url=row['video'])]))\n",
     "            new_entry.homographs.append(homograph([lexical_unit(row['translation'])]))\n",
     "            new_entry.etymology = etymology(row['etymology'])\n",
     "            to_add_to_bd.append(new_entry)\n",
     "            if row['words_referred'] != '':\n",
-    "                new_entry.etymology.words_referred.extend(row['words_referred'].split(','))\n",
+    "                for word in row['words_referred'].split(','):\n",
+    "                    new_entry.etymology.words_referred.append(gloss(word=word))\n",
     "\n",
     "\n",
     "        with open('database.pickle', 'wb') as outfile:\n",
@@ -90,19 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://drive.google.com/open?id=0BxKi0m1pRr5VQzExMng1UXhMYnRYYU1UNzVLRk82LXhUcDFr\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[0].signs[0].videos[0].url)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open('database.pickle', 'rb') as outfile:\n",
@@ -250,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.4.0"
   }
  },
  "nbformat": 4,
