--- a/csv_to_pickle_converter.ipynb
+++ b/csv_to_pickle_converter.ipynb
@@ -52,20 +52,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'signs': [{'hamnosys': '\\ue0e0\\ue003\\ue012\\ue00d\\ue025\\ue03d\\ue052\\ue083\\ue067\\ue0d1\\ue0c7\\ue0e1\\ue0d8\\ue0e7\\ue001\\ue029\\ue038\\ue059\\ue052\\ue0af', 'labels': {'domain': '', 'style': '', 'regions': []}, 'videos': ['https://drive.google.com/open?id=0BxKi0m1pRr5VWWU5MjVuWlZZUEp3R2FqOUtxN3IteW9IUGtV']}], 'MWEs': [], 'etymology': {'words_referred': [], 'text': ''}, 'homographs': [{'lexical_units': [{'part_of_speech': [], 'inflected_forms': [], 'examples': [], 'translation': 'почта', 'labels': {'domain': '', 'style': '', 'regions': []}}]}]}\n"
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "d = pickle.load(open(\"./database.pickle\", 'rb'))\n",
-    "print(d[1])"
+    "\n",
+    "\"\"\"for entry in d:\n",
+    "    if 'яйцо' in ' '.join([[lu.translation for lu in homograph.lexical_units] for homograph in entry.homographs][0]):\n",
+    "        print(entry) \n",
+    "    else:\n",
+    "        print('no')\"\"\"\n",
+    "#d[0].homographs[0].lexical_units.append(lexical_unit(translation = 'проба'))   \n",
+    "for entry in d:\n",
+    "    print((' ').join([sign.hamnosys for sign in entry.signs]))"
    ]
   },
   {
@@ -257,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.0"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
