--- a/csv_to_pickle_converter.ipynb
+++ b/csv_to_pickle_converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +41,7 @@
     "\n",
     "        for row in data:\n",
     "            new_entry = entry()\n",
-    "            new_entry.signs.append(sign(row['hamnosys'], [video(url=row['video'])]))\n",
+    "            new_entry.signs.append(sign(row['hamnosys'], [video(url=row['video'], filename=(row['translation']+'.mp4'))]))\n",
     "            new_entry.homographs.append(homograph([lexical_unit(row['translation'])]))\n",
     "            new_entry.etymology = etymology(row['etymology'])\n",
     "            to_add_to_bd.append(new_entry)\n",
@@ -52,23 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'человек.mp4'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -79,9 +81,7 @@
     "        print(entry) \n",
     "    else:\n",
     "        print('no')\"\"\"\n",
-    "#d[0].homographs[0].lexical_units.append(lexical_unit(translation = 'проба'))   \n",
-    "for entry in d:\n",
-    "    print((' ').join([sign.hamnosys for sign in entry.signs]))"
+    "d[0].signs[0].videos[0].filename"
    ]
   },
   {
